:hammer: added oneoff specialization implementation
