# internal/model/user.go
@@ -2,6 +2,8 @@ package model
 
 import (
 	"database/sql"
+	"encoding/json"
+	"fmt"
 	"time"
 )
 
@@ -9,6 +11,9 @@ const (
 	RoleUnknown = "unknown"
 	RoleAdmin   = "admin"
 	RoleUser    = "user"
+
+	SpecializationEngineer = "engineer"
+	SpecializationManager  = "manager"
 )
 
 type User struct {
@@ -34,6 +39,35 @@ type UpdateUser struct {
 	Role     sql.NullString
 }
 
+type UserSpec struct {
+	User
+	Specialization
+}
+
+type UserSpecSerialized struct {
+	User
+	SpecializationSerialized []byte `db:"specialization"`
+}
+
+type Specialization struct {
+	Type string `json:"type"`
+
+	Engineer *Engineer `json:"engineer,omitempty"`
+	Manager  *Manager  `json:"manager,omitempty"`
+}
+
+type Engineer struct {
+	Level    int64  `json:"level"`
+	Company  string `json:"company"`
+	Language string `json:"language"`
+}
+
+type Manager struct {
+	Level      int64  `json:"level"`
+	Company    string `json:"company"`
+	Department string `json:"department"`
+}
+
 func (u *UserIdentifier) Set(username, email string) {
 	if username != "" {
 		u.Username.String = username
@@ -54,3 +88,43 @@ const (
 	StatusEmailExists                        // 2
 	StatusBothExist                          // 3
 )
+
+func (u *UserSpec) ToUserSpecSerialized() (*UserSpecSerialized, error) {
+	if u.Specialization == (Specialization{}) {
+		return &UserSpecSerialized{
+			User:                     u.User,
+			SpecializationSerialized: []byte{},
+		}, nil
+	}
+
+	specializationJSON, err := json.Marshal(u.Specialization)
+	if err != nil {
+		return nil, fmt.Errorf("failed to marshal specialization: %w", err)
+	}
+
+	return &UserSpecSerialized{
+		User:                     u.User,
+		SpecializationSerialized: specializationJSON,
+	}, nil
+}
+
+func (u *UserSpecSerialized) ToUserSpec() (*UserSpec, error) {
+	if len(u.SpecializationSerialized) == 0 {
+		// for old users without specialization
+		return &UserSpec{
+			User:           u.User,
+			Specialization: Specialization{},
+		}, nil
+	}
+
+	var specialization Specialization
+	err := json.Unmarshal(u.SpecializationSerialized, &specialization)
+	if err != nil {
+		return nil, fmt.Errorf("failed to unmarshal specialization: %w", err)
+	}
+
+	return &UserSpec{
+		User:           u.User,
+		Specialization: specialization,
+	}, nil
+}
